--- a/lib/styles/index.css
+++ b/lib/styles/index.css
@@ -346,12 +346,20 @@ summary::-webkit-details-marker {
     max-width: 864px;
     width: 100%;
     margin: 0 auto;
-    padding: 30px 80p;
+    padding: 30px 80px;
     justify-content: center;
 }
 .Switch-title {
     display: flex;
     color: #000;
     gap: 20px;
+    border-bottom: 1px solid #FF7C06;
+}
+
+.swActive { 
     border-bottom: 3px solid #FF7C06;
+}
+#Sw1, #Sw2 {
+    margin: 0;
+    font-weight: 600;
 }
