--- a/lib/styles/index.css
+++ b/lib/styles/index.css
@@ -84,20 +84,23 @@ input[type=number] {
     justify-content: center;
 }
 .startBtn {
-    display: inline-block;
+    display: flex;
     outline: 0;
-    border: none;
     cursor: pointer;
-    padding: 0 24px;
-    border-radius: 50px;
+    padding: 10px;
     min-width: 200px;
     height: 50px;
     font-size: 18px;
-    background-color: #fd0;
     font-weight: 500;
     color: #222;
     margin: 10px 0;
-}
+    background: #FFFFFF;
+    border: 1px solid #FF7C06;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    align-items: center;
+    gap: 20px;
+    }
 .startBtn:hover {
     background-color: rgb(204, 184, 54);
 }
@@ -165,24 +168,6 @@ input[type=number] {
     max-width: 1000px;
     max-height: 1000px;
     justify-content: center;
-}
-.startBtn {
-    display: inline-block;
-    outline: 0;
-    border: none;
-    cursor: pointer;
-    padding: 0 24px;
-    border-radius: 50px;
-    min-width: 200px;
-    height: 50px;
-    font-size: 18px;
-    background-color: #fd0;
-    font-weight: 500;
-    color: #222;
-    margin: 10px 0;
-}
-.startBtn:hover {
-    background-color: rgb(204, 184, 54);
 }
 .canvasWrapper {
     margin: 50px;
@@ -362,4 +347,40 @@ summary::-webkit-details-marker {
 #Sw1, #Sw2 {
     margin: 0;
     font-weight: 600;
+    cursor: pointer;
+}
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin :30px 0 ;
+}
+.content_img    {
+    width: 100%;
+}
+.content_logo{
+    width: 100%;
+}
+.content__column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#btn_modal_window{
+    display: flex;
+    gap: 10px;
+    font-family: Helvetica Neue;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 39px;
+    letter-spacing: 0em;
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    max-width: 237px;
+    width: 100%;
+    background: linear-gradient(180deg, #FF7C06 0%, #E45C00 100%);
 }
