--- a/lib/styles/game.css
+++ b/lib/styles/game.css
@@ -306,12 +306,16 @@ input[type=number] {
     z-index: 1000;
 }
 .modal .modal_content {
-    background-color: #000000;
+    display: flex;
+    background: #FFFFFF;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     z-index: 99999;
+    width: 504px;
+    height: 502px;
+    border-radius: 16px; 
 }
 .modal .modal_content .close_modal_window {
     
