--- a/lib/styles/index.css
+++ b/lib/styles/index.css
@@ -383,4 +383,18 @@ summary::-webkit-details-marker {
     max-width: 237px;
     width: 100%;
     background: linear-gradient(180deg, #FF7C06 0%, #E45C00 100%);
+
+}
+.bottom inscription {
+    position: absolute;
+    font-family: 'Helvetica Neue';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: black;
+}
+.input_map {
+    background: #F2F2F2;
+    border-radius: 8px;
 }
