--- a/lib/styles/game.css
+++ b/lib/styles/game.css
@@ -295,6 +295,7 @@ input[type=number] {
 }
 .modal {
     display: none;
+    max-width: 504px;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -306,9 +307,10 @@ input[type=number] {
     z-index: 1000;
 }
 .modal .modal_content {
-    width: 504px;
+    max-width: 504px;
     height: 502px;
     background: #FFFFFF;
+    text-align: center;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
