--- a/lib/styles/game.css
+++ b/lib/styles/game.css
@@ -281,7 +281,7 @@ input[type=number] {
 /* Кнопка закрытия */
 .close {
     color: #aaa;
-    float: right;
+    /* float: right; */
     font-size: 28px;
     font-weight: bold;
 }
@@ -311,7 +311,7 @@ input[type=number] {
     background: #FFFFFF;
     text-align: center;
     margin: 15% auto;
-    padding: 20px;
+    /* padding: 20px; */
     border: 1px solid #888;
     width: 100%;
     z-index: 99999;
